--- a/painel/app.ini
+++ b/painel/app.ini
@@ -2,3 +2,10 @@
 port = 50000
 local = PREMIR
 
+[server]
+host = 192.168.2.8
+user = chamarSenha
+password = fundosaude@2021
+db = database_att
+
+
