--- a/chamar_senha/util/settings.ini
+++ b/chamar_senha/util/settings.ini
@@ -1,7 +1,7 @@
 [server]
 host = 192.168.2.8
-user = chamarSenha
+user = sms
 password = fundosaude@2021
 db = database_att
-setor = TFD
+setor = AUT_EXAMES
 
