--- a/painel/app.ini
+++ b/painel/app.ini
@@ -1,10 +1,11 @@
 [config]
 port = 50000
-local = TFD
+local = TFD;CNS
+painel = TV
 
 [server]
 host = 192.168.2.8
-user = chamarSenha
+user = sms
 password = fundosaude@2021
 db = database_att
 
